# Face_Alignment

./: .gitignore  CMakeLists.txt  FaceStandarizer.cpp  FaceStandarizer.h  compile.sh  main.cpp
